Added more routes and updated styling

--- a/src/components/conditions/find_conditions/styles/styles.css
+++ b/src/components/conditions/find_conditions/styles/styles.css
@@ -7,8 +7,18 @@
 }
 
 
+.react-bs-table.react-bs-table-bordered {
+	border: 1px solid #424242;
+}
 
+input.filter.text-filter.form-control {
+	border: 1px solid #424242;
+}
+
+
+/**********
+	Id's
+**********/
 #table-container {
 	min-height: 600px;
 }
-
