--- a/src/css/global.css
+++ b/src/css/global.css
@@ -23,6 +23,50 @@ body {
   Classes
 ********************/
 
+.required-text {
+  font-size: 1.5rem;
+  color: red;
+  font-weight: bold;
+}
+
+.required-field {
+  color: red;
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.margin-bottom {
+  margin-bottom: 80px;
+}
+
+.error-response-text {
+  color: #FF0000;
+  border: 1px solid #FF0000;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 3px;
+  font-size: 1.3rem;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.val-error {
+  border: 2px solid red;
+  box-shadow: 0px 0px 17px #fea6a6;
+}
+
+.val-error:focus {
+  border: 2px solid red;
+  box-shadow: 0px 0px 17px #fea6a6;
+}
+
+.validation-error-text {
+  color: #FF0000;
+  font-weight: bold;
+  text-align: center;
+}
 
 .footer {
   font-size: 1.5rem;
